--- a/src/assets/style/comman.scss
+++ b/src/assets/style/comman.scss
@@ -1,3 +1,6 @@
+@import url(font);
+@import url(reset);
+
 html {
     font-family: "Helvetica Neue",Helvetica,"PingFang SC","Hiragino Sans GB","Microsoft YaHei","微软雅黑",Arial,sans-serif;
 }
