添加标签云

--- a/src/assets/style/comman.scss
+++ b/src/assets/style/comman.scss
@@ -5,6 +5,10 @@ html {
     font-family: "Helvetica Neue",Helvetica,"PingFang SC","Hiragino Sans GB","Microsoft YaHei","微软雅黑",Arial,sans-serif;
 }
 
+.clear {
+    clear: both;
+}
+
 .text-overflow {
     overflow: hidden;
     white-space: nowrap;
